<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/clock_main_layout" >
    
      <LinearLayout
        android:id="@+id/title_ly"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/left_Btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_btn" />
        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/smart_alarm"
            android:textColor="#ffffff"
            android:textAppearance="@android:style/TextAppearance.Medium" >
        </TextView>
        <TextView
            android:id="@+id/syn_Btn"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sync"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        </LinearLayout>
        
      <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:clickable="true" >
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >
        <TextView
            android:id="@+id/texttip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/smart_alarm_tip"
            android:textColor="@color/textColor"
            android:textAppearance="@android:style/TextAppearance.Medium" />
   <!--      <TextView
            android:id="@+id/texttip2"
            android:layout_below="@+id/texttip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColor="@color/textColor"
            android:textAppearance="@android:style/TextAppearance.Small" /> -->
        </RelativeLayout>
      </RelativeLayout>
      
    <View android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_color" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true" >
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/alarm"
            android:textColor="@color/textColor"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        </RelativeLayout>
        <com.guogee.smartwatch.widget.Switch
		    android:id="@+id/switch_clock_Btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_centerVertical="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="10dp" />
    </RelativeLayout>
    
    <View android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_color" />
        
    <RelativeLayout
        android:id="@+id/start_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/smart_start_time"
            android:textColor="@color/textColor"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        <TextView
		    android:id="@+id/start_time_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_centerVertical="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="20dp"
		    android:text="09:00"
		    android:textColor="@color/textColor" />
    </RelativeLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/interval_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/wakeup_space"
            android:textColor="@color/textColor"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        <TextView
		    android:id="@+id/interval_time_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_centerVertical="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="20dp"
		    android:text="10分钟" 
		    android:textColor="@color/textColor" />        
    </RelativeLayout>

        <View android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_color" />
         
        <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:clickable="true" >

         <Button android:id="@+id/day7"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Sun"
             android:textColor="@color/textColor"
             android:textAppearance="@android:style/TextAppearance.Small" />
         
         <View
             android:layout_width="0.1dp"
             android:layout_height="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/line_color" />
                       
         <Button android:id="@+id/day1"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Mon"
             android:textColor="@color/textColor"
             android:textAppearance="@android:style/TextAppearance.Small" />
          
         <View
             android:layout_width="0.1dp"
             android:layout_height="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/line_color" />
                  
         <Button android:id="@+id/day2"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Tues"
             android:textColor="@color/textColor"
             android:textAppearance="@android:style/TextAppearance.Small" />
         <View
             android:layout_width="0.1dp"
             android:layout_height="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/line_color" />
         <Button
             android:id="@+id/day3"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Wed"
             android:textAppearance="@android:style/TextAppearance.Small"
             android:textColor="@color/textColor" />
         <View
             android:layout_width="0.1dp"
             android:layout_height="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/line_color" />
         <Button android:id="@+id/day4"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Thur"
             android:textColor="@color/textColor"
             android:textAppearance="@android:style/TextAppearance.Small" />
         <View
             android:layout_width="0.1dp"
             android:layout_height="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/line_color" />         
         <Button android:id="@+id/day5"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Fri"
             android:textColor="@color/textColor"
             android:textAppearance="@android:style/TextAppearance.Small" />
         <View
             android:layout_width="0.1dp"
             android:layout_height="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@color/line_color" />         
         <Button android:id="@+id/day6"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:background="@drawable/day_background_a"
             android:text="@string/Sat"
             android:textColor="@color/textColor"
             android:textAppearance="@android:style/TextAppearance.Small" />         
         </LinearLayout>
         
        <View android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_color" />
</LinearLayout>
